Restore Java 8 compatibility
aspectj 1.9.8+ requires Java 11
https://github.com/eclipse/org.aspectj/blob/master/docs/dist/doc/README-199.html

org.eclipse.jdt:ecj 3.27.0+ requires Java 11

com.google.errorprone:error_prone_core 2.9.0+ requires Java 11