@@ -39,9 +39,9 @@
 
   <profiles>
     <profile>
-      <id>16+</id>
+      <id>11+</id>
       <activation>
-        <jdk>[16,)</jdk>
+        <jdk>[11,)</jdk>
       </activation>
       <build>
         <plugins>
@@ -49,13 +49,18 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <configuration>
-              <skip>true</skip>
-<!--              <argLine>-->
-<!--                &#45;&#45;add-modules java.se-->
-<!--                &#45;&#45;add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED-->
-<!--                &#45;&#45;add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED-->
-<!--                &#45;&#45;add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED-->
-<!--              </argLine>-->
+              <argLine>
+                --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+                --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+                --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+                --add-exports jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
+                --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+                --add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
+                --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+                --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+                --add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+                --add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
+              </argLine>
             </configuration>
           </plugin>
         </plugins>
